--- a/AppProcesso/appsettings.json
+++ b/AppProcesso/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=PCDSK01\\DBSQL;Database=FSBR;User id=sa;Password=M@sterkey;TrustServerCertificate=true;"
+    "DefaultConnection": "Server={SERVIDOR SQL};Database={DATABASE_NAME};User id={USER_ID};Password={PASSWORD};TrustServerCertificate=true;"
   },
   "Logging": {
     "LogLevel": {
